updating to java 17 part 1