@@ -13,24 +13,26 @@ import java.util.List;
 
 public class Amount extends SubCmd {
 
-    public Amount(ItemEditCommand cmd) {
+    public Amount(final ItemEditCommand cmd) {
         super("amount", cmd, true, true);
     }
 
     @Override
-    public void onCommand(CommandSender sender, String alias, String[] args) {
+    public void onCommand(final CommandSender sender, final String alias, final String[] args) {
         Player p = (Player) sender;
         ItemStack item = this.getItemInHand(p);
         try {
-            if (args.length != 2)
+            if (args.length != 2) {
                 throw new IllegalArgumentException("Wrong param number");
+            }
             int amount = Integer.parseInt(args[1]);
-            if (amount < 0) //remove this amount
+            if (amount < 0) { //remove this amount
                 item.setAmount(Math.max(0, item.getAmount() + amount));
-            else if ((amount > 127) || (amount < 1))
+            }else if ((amount > 127) || (amount < 1)) {
                 throw new IllegalArgumentException("Wrong amount number");
-            else
+            }else {
                 item.setAmount(amount);
+            }
             updateView(p);
         } catch (Exception e) {
             onFail(p, alias);
@@ -39,9 +41,10 @@ public class Amount extends SubCmd {
     }
 
     @Override
-    public List<String> onComplete(CommandSender sender, String[] args) {
-        if (args.length == 2)
-            return CompleteUtility.complete(args[1], Arrays.asList("1", "10", "64", "100", "127"));
-        return Collections.emptyList();
+    public List<String> onComplete(final CommandSender sender, final String[] args) {
+        return switch (args.length){
+            case 2 -> CompleteUtility.complete(args[1], Arrays.asList("1", "10", "64", "100", "127"));
+            default -> List.of();
+        };
     }
 }
