@@ -14,7 +14,6 @@ import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.EnchantmentStorageMeta;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 public class BookEnchant extends SubCmd {
@@ -23,19 +22,21 @@ public class BookEnchant extends SubCmd {
     }
 
     @Override
-    public void onCommand(CommandSender sender, String alias, String[] args) {
+    public void onCommand(final CommandSender sender, final String alias, final String[] args) {
         Player p = (Player) sender;
         ItemStack item = this.getItemInHand(p);
-        if (item.getType() == Material.BOOK)
+        if (item.getType() == Material.BOOK) {
             item.setType(Material.ENCHANTED_BOOK);
+        }
         if (!(item.getItemMeta() instanceof EnchantmentStorageMeta)) {
             Util.sendMessage(p, this.getLanguageString("wrong-type", null, sender));
             return;
         }
         try {
             EnchantmentStorageMeta meta = (EnchantmentStorageMeta) ItemUtils.getMeta(item);
-            if (args.length != 2 && args.length != 3)
+            if (args.length != 2 && args.length != 3) {
                 throw new IllegalArgumentException("Wrong argument Number");
+            }
             int lv = 1;
             Enchantment ench = Aliases.ENCHANT.convertAlias(args[1]);
             if (ench == null) {
@@ -43,13 +44,15 @@ public class BookEnchant extends SubCmd {
                 onFail(p, alias);
                 return;
             }
-            if (args.length == 3)
+            if (args.length == 3) {
                 lv = Integer.parseInt(args[2]);
-            if (lv == 0)
+            }
+            if (lv == 0) {
                 meta.removeStoredEnchant(ench);
-            else {
-                if (!p.hasPermission(this.getPermission() + ".bypass_max_level"))
+            } else {
+                if (!p.hasPermission(this.getPermission() + ".bypass_max_level")) {
                     lv = Math.min(ench.getMaxLevel(), lv);
+                }
                 meta.addStoredEnchant(ench, lv, true);
             }
             item.setItemMeta(meta);
@@ -60,16 +63,22 @@ public class BookEnchant extends SubCmd {
     }
 
     @Override
-    public List<String> onComplete(CommandSender sender, String[] args) {
-        if (args.length == 2)
-            return CompleteUtility.complete(args[1], Aliases.ENCHANT);
-        Enchantment ench = Aliases.ENCHANT.convertAlias(args[2]);
-        if (ench == null)
-            return Collections.emptyList();
-        ArrayList<String> list = new ArrayList<>();
-        for (int i = 0; i <= ench.getMaxLevel(); i++)
-            list.add(String.valueOf(i));
-        return list;
+    public List<String> onComplete(final CommandSender sender, final String[] args) {
+        return switch (args.length) {
+            case 2 -> CompleteUtility.complete(args[1], Aliases.ENCHANT);
+            case 3 -> {
+                Enchantment ench = Aliases.ENCHANT.convertAlias(args[1]);
+                if (ench == null) {
+                    yield List.of();
+                }
+                ArrayList<String> list = new ArrayList<>();
+                for (int i = 0; i <= ench.getMaxLevel(); i++) {
+                    list.add(String.valueOf(i));
+                }
+                yield list;
+            }
+            default -> List.of();
+        };
     }
 
 }
