@@ -14,7 +14,6 @@ import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.inventory.meta.LeatherArmorMeta;
 import org.bukkit.inventory.meta.PotionMeta;
 
-import java.util.Collections;
 import java.util.List;
 
 public class Color extends SubCmd {
@@ -23,7 +22,7 @@ public class Color extends SubCmd {
     private final String leatherPerm;
     private final String starsPerm;
 
-    public Color(ItemEditCommand cmd) {
+    public Color(final ItemEditCommand cmd) {
         super("color", cmd, true, true);
         tippedArrowPerm = getPermission() + ".tipped_arrow";
         potionPerm = getPermission() + ".potion";
@@ -32,7 +31,7 @@ public class Color extends SubCmd {
     }
 
     @Override
-    public void onCommand(CommandSender sender, String alias, String[] args) {
+    public void onCommand(final CommandSender sender, final String alias, final String[] args) {
         Player p = (Player) sender;
         ItemStack item = this.getItemInHand(p);
         ItemMeta meta = ItemUtils.getMeta(item);
@@ -49,10 +48,13 @@ public class Color extends SubCmd {
             }
             PotionMeta potionMeta = (PotionMeta) meta;
             try {
-                if (args.length != 4)
+                if (args.length != 4) {
                     throw new IllegalArgumentException("Wrong param number");
+                }
 
-                org.bukkit.Color color = org.bukkit.Color.fromRGB(Integer.parseInt(args[1]), Integer.parseInt(args[2]),
+                org.bukkit.Color color = org.bukkit.Color.fromRGB(
+                        Integer.parseInt(args[1]),
+                        Integer.parseInt(args[2]),
                         Integer.parseInt(args[3]));
                 potionMeta.setColor(color);
                 item.setItemMeta(potionMeta);
@@ -70,10 +72,13 @@ public class Color extends SubCmd {
 
             LeatherArmorMeta leatherMeta = (LeatherArmorMeta) meta;
             try {
-                if (args.length != 4)
+                if (args.length != 4) {
                     throw new IllegalArgumentException("Wrong param number");
+                }
 
-                org.bukkit.Color color = org.bukkit.Color.fromRGB(Integer.parseInt(args[1]), Integer.parseInt(args[2]),
+                org.bukkit.Color color = org.bukkit.Color.fromRGB(
+                        Integer.parseInt(args[1]),
+                        Integer.parseInt(args[2]),
                         Integer.parseInt(args[3]));
                 leatherMeta.setColor(color);
                 item.setItemMeta(leatherMeta);
@@ -91,16 +96,22 @@ public class Color extends SubCmd {
 
             FireworkEffectMeta starMeta = (FireworkEffectMeta) meta;
             try {
-                if (args.length != 4)
+                if (args.length != 4) {
                     throw new IllegalArgumentException("Wrong param number");
+                }
 
-                org.bukkit.Color color = org.bukkit.Color.fromRGB(Integer.parseInt(args[1]), Integer.parseInt(args[2]),
+                org.bukkit.Color color = org.bukkit.Color.fromRGB(
+                        Integer.parseInt(args[1]),
+                        Integer.parseInt(args[2]),
                         Integer.parseInt(args[3]));
                 FireworkEffect oldEffect = starMeta.getEffect(); // may be null?
-                FireworkEffect.Builder newEffect = FireworkEffect.builder().flicker(oldEffect != null && oldEffect.hasFlicker())
-                        .trail(oldEffect != null && oldEffect.hasTrail()).withColor(color);
-                if (oldEffect != null && oldEffect.getFadeColors() != null) // may be null?
+                FireworkEffect.Builder newEffect = FireworkEffect.builder()
+                        .flicker(oldEffect != null && oldEffect.hasFlicker())
+                        .trail(oldEffect != null && oldEffect.hasTrail())
+                        .withColor(color);
+                if (oldEffect != null && oldEffect.getFadeColors() != null) { // may be null?
                     newEffect.withFade(oldEffect.getFadeColors());
+                }
                 starMeta.setEffect(newEffect.build());
                 item.setItemMeta(starMeta);
                 updateView(p);
@@ -110,12 +121,11 @@ public class Color extends SubCmd {
             return;
         }
         Util.sendMessage(p, this.getLanguageString("wrong-type", null, sender));
-
     }
 
     // itemedit bookauthor <name>
     @Override
     public List<String> onComplete(CommandSender sender, String[] args) {
-        return Collections.emptyList();
+        return List.of();
     }
 }
